--- a/src/App.css
+++ b/src/App.css
@@ -35,8 +35,24 @@
 
 .card {
   padding: 2em;
+  border: 1px solid yellow;
+  border-radius: 20px;
+  margin: 4rem auto;
 }
 
 .read-the-docs {
   color: #888;
+}
+
+.friendsContainer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.5rem;
+}
+
+.friendCard {
+  padding: 2rem;
+  border: 1px solid yellow;
+  border-radius: 10px;
+  box-shadow: 0px 3px 10px yellow;
 }
